--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,24 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Montserrat", monospace;
+}
+
+h1 {
+  font-family: "Playfair Display", serif;
 }
 
 @layer utilities {
