--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,21 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
-
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: "Montserrat", monospace !important;
 }
 
-.font-heading {
-  font-family: "Playfair Display", serif;
+html {
+  font-family: var(--font-inter);
 }
 
-h1 {
-  font-family: "Playfair Display", serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-roboto-mono) !important;
 }
 
 @layer utilities {
